--- a/public/admin/assets/css/main.css
+++ b/public/admin/assets/css/main.css
@@ -65,6 +65,7 @@
   font-size: 14px;
   font-weight: 600;
   text-transform: capitalize;
+  margin: 5px;
 }
 
 #main-wrapper .header .header-left .header_bar{}
