--- a/public/admin/assets/css/pdf/visaList.css
+++ b/public/admin/assets/css/pdf/visaList.css
@@ -47,6 +47,16 @@ body{
 .app_wrapper .content_area .content_table #visalist_table tbody{}
 .app_wrapper .content_area .content_table #visalist_table tbody tr{}
 .app_wrapper .content_area .content_table #visalist_table tbody tr td{
-	border: 1px solid #777;
+	border: 1px solid #000;
 	padding: 5px;
+	text-align: center;
+}
+.app_wrapper .content_area .content_table #visalist_table tbody tr td:nth-child(4){
+	text-align: left;
+}
+.my_table, .right_table{
+	border: 1px solid #000;
+   text-align: center;
+   text-transform: uppercase;
+   padding: 5px;
 }
