--- a/public/admin/assets/css/pdf/visaDetails.css
+++ b/public/admin/assets/css/pdf/visaDetails.css
@@ -1,5 +1,5 @@
 @page {
-   margin: 20mm 5mm 2mm 15mm;
+   margin: 10mm 5mm 2mm 10mm;
 }
 
 *{padding: 0; margin: 0; outline: 0; color: #000; background-color: #fff;}
@@ -17,7 +17,11 @@ body{
 	font-size: 14px;
 }
 
-.app_wrapper{}
+.app_wrapper{
+	border: 1px solid #000;
+	padding: 10px;
+	padding-top: 0;
+}
 
 .app_wrapper .header_area{}
 .app_wrapper .header_area .top_header{}
@@ -25,12 +29,40 @@ body{
 .app_wrapper .header_area .top_header .headline .visa_heading{
 	text-align: center;
 	font-size: 20px;
-	padding: 5px;
 	text-transform: uppercase;
 }
 
 .app_wrapper .content_area{}
+.app_wrapper .content_area .content_info{
+	width: 100%;
+}
+.app_wrapper .content_area .content_info .content_details{
+	width: 100%;
+	font-size: 15px;
+}
+.app_wrapper .content_area .content_info .content_details .left_content{
+	width: 50%;
+	float: left;
+	padding-right: 5px;
+}
+.app_wrapper .content_area .content_info .content_details .left_content span{
+	font-weight: bold;
+}
+.app_wrapper .content_area .content_info .content_details .right_content{
+	width: auto;
+	float: left;
+	padding-left: 5px;
+}
+.app_wrapper .content_area .content_info .content_details .right_content span{
+	font-weight: bold;
+}
 .app_wrapper .content_area .content_table{}
+.app_wrapper .content_area .content_table .customers_heading{
+	text-align: center;
+	font-size: 17px;
+	padding: 5px;
+	text-transform: uppercase;
+}
 .app_wrapper .content_area .content_table #visalist_table{
 	border-collapse: collapse;
 	border: 1px solid #000;
@@ -41,7 +73,7 @@ body{
 .app_wrapper .content_area .content_table #visalist_table thead tr th{
 	border: 1px solid #000;
    text-align: center;
-   padding: 3px;
+   padding: 5px;
 }
 .app_wrapper .content_area .content_table #visalist_table tbody{}
 .app_wrapper .content_area .content_table #visalist_table tbody tr{}
@@ -49,9 +81,6 @@ body{
 	border: 1px solid #000;
 	padding: 5px;
 	text-align: center;
-}
-.app_wrapper .content_area .content_table #visalist_table tbody tr td:nth-child(4){
-	text-align: left;
 }
 .my_table, .right_table{
 	border: 1px solid #000;
