Manpower Info Updated

--- a/public/admin/assets/css/pdf/putupprint.css
+++ b/public/admin/assets/css/pdf/putupprint.css
@@ -1,5 +1,5 @@
 @page {
-   margin: 10mm 5mm 5mm 15mm;
+   margin: 5mm 5mm 5mm 5mm;
 }
 
 *{padding: 0; margin: 0; outline: 0; color: #000; background-color: #fff;}
@@ -18,12 +18,52 @@ body{
 }
 .app_wrapper{
 	width: 100%;
-	border-left: 1px solid #000;
 	padding-left: 4px;
 }
 .app_wrapper .main_content{
 	padding-left: 4px;
 	text-align: justify;
+}
+.app_wrapper .main_content .putup_headline{}
+.app_wrapper .main_content .putup_headline .main_heading{
+	text-align: center;
+	width: 80%;
+	float: left;
+}
+.app_wrapper .main_content .putup_headline .headline_right{
+	width: auto;
+	float: left;
+}
+.app_wrapper .main_content .putup_headline .headline_right .right_top{}
+.app_wrapper .main_content .putup_headline .headline_right .right_bottom{}
+.app_wrapper .main_content .putup_headline .main_heading .top_heading{
+	font-size: 28px;
+}
+.app_wrapper .main_content .putup_headline .heading_data{}
+.app_wrapper .main_content .putup_headline .heading_data .headingdata_left{}
+.app_wrapper .main_content .putup_headline .heading_data .headingdata_right{
+	font-size: 18px;
+}
+.app_wrapper .main_content .putup_headline .heading_data_bottom{
+	text-align: center;
+	padding-left: 300px;
+	padding-right: 300px;
+}
+.app_wrapper .main_content .putup_headline .heading_data_bottom .left_bottom{
+	width: 50%;
+	float: left;
+}
+.app_wrapper .main_content .putup_headline .heading_data_bottom .left_bottom .headingdata_left{}
+.app_wrapper .main_content .putup_headline .heading_data_bottom .left_bottom .headingdata_right{
+	font-size: 18px;
+}
+.app_wrapper .main_content .putup_headline .heading_data_bottom .right_bottom{
+	width: auto;
+	float: left;
+}
+.app_wrapper .main_content .putup_headline .heading_data_bottom .right_bottom .headingdata_left{}
+.app_wrapper .main_content .putup_headline .heading_data_bottom .right_bottom .headingdata_right{
+	font-size: 18px;
 }
 .app_wrapper .main_content .primary_putup .putup_starting{}
 .app_wrapper .main_content .primary_putup .putup_starting .putup_serial{
@@ -74,120 +114,17 @@ body{
 	font-size: 10px;
 	padding: 4px;
 }
-.app_wrapper .main_content .putup_customers .customers_table #customersData tr td:nth-child(2){
+
+/* .app_wrapper .main_content .putup_customers .customers_table #customersData tr td:nth-child(5){
 	 text-align: left;
-}
-.app_wrapper .main_content .putup_customers .customers_table #customersData tr td:nth-child(5){
-	 text-align: left;
-}
-.app_wrapper .main_content .putup_training{
-	padding-top: 10px;
-}
-.app_wrapper .main_content .putup_training .training_headeline{
-	font-size: 20px;
-}
-.app_wrapper .main_content .putup_training .training_headeline .heading_sl{}
-.app_wrapper .main_content .putup_training .training_headeline .heading_title{}
-.app_wrapper .main_content .putup_training .training_table{}
-.app_wrapper .main_content .putup_training .training_table #customersData{
-	border-collapse: collapse;
-	border: 1px solid #000;
-	width: 100%;
-}
-.app_wrapper .main_content .putup_training .training_table #customersData tr{}
-.app_wrapper .main_content .putup_training .training_table #customersData tr th{
-	border: 1px solid #000;
-   text-align: center;
-   font-family: "kalpurush";
-   font-size: 13px;
-}
-.app_wrapper .main_content .putup_training .training_table #customersData tr td{
-	border: 1px solid #000;
-   text-align: center;
-   text-transform: uppercase;
-	font-family: "roboto";
-	font-size: 10px;
-	padding: 4px;
-}
-.app_wrapper .main_content .putup_training .training_table #customersData tr td:nth-child(2){
-	 text-align: left;
-}
-.app_wrapper .main_content .putup_center{
-	padding-top: 10px;
-}
-.app_wrapper .main_content .putup_center .center_headeline{
-	font-size: 20px;
-}
-.app_wrapper .main_content .putup_center .center_headeline .heading_sl{}
-.app_wrapper .main_content .putup_center .center_headeline .heading_title{}
-.app_wrapper .main_content .putup_center .center_table{}
-.app_wrapper .main_content .putup_center .center_table #customersData{
-	border-collapse: collapse;
-	border: 1px solid #000;
-	width: 100%;
-}
-.app_wrapper .main_content .putup_center .center_table #customersData tr{}
-.app_wrapper .main_content .putup_center .center_table #customersData tr th{
-	border: 1px solid #000;
-   text-align: center;
-   font-family: "kalpurush";
-   font-size: 13px;
-}
-.app_wrapper .main_content .putup_center .center_table #customersData tr td{
-	border: 1px solid #000;
-   text-align: center;
-   text-transform: uppercase;
-	font-family: "roboto";
-	font-size: 10px;
-	padding: 4px;
-}
-.app_wrapper .main_content .putup_center .center_table #customersData tr td:nth-child(2){
-	 text-align: left;
-}
-.app_wrapper .main_content .putup_payment{
-	padding-top: 10px;
-}
-.app_wrapper .main_content .putup_payment .payment_headeline{
-	font-size: 20px;
-}
-.app_wrapper .main_content .putup_payment .payment_headeline .heading_sl{}
-.app_wrapper .main_content .putup_payment .payment_headeline .heading_title{}
-.app_wrapper .main_content .putup_payment .payment_table{}
-.app_wrapper .main_content .putup_payment .payment_table #paymentData{
-	border-collapse: collapse;
-	border: 1px solid #000;
-	width: 100%;
-	margin-bottom: 15px;
-}
-.app_wrapper .main_content .putup_payment .payment_table #paymentData tr{}
-.app_wrapper .main_content .putup_payment .payment_table #paymentData tr th{
-	border: 1px solid #000;
-   text-align: center;
-   font-family: "kalpurush";
-   font-size: 13px;
-}
-.app_wrapper .main_content .putup_payment .payment_table #paymentData tr td{
-	border: 1px solid #000;
-   text-align: center;
-   text-transform: uppercase;
-	font-size: 13px;
-	padding: 4px;
-}
+} */
+
 .app_wrapper .main_content .putup_translate{
-	padding-top: 10px;
-	padding-bottom: 25px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 .app_wrapper .main_content .putup_translate .translate_info{}
-.app_wrapper .main_content .putup_translate .translate_info .translate_serial{
-	display: inline-block;
-	float: left;
-	width: 5%;
-	font-size: 20px;
-}
 .app_wrapper .main_content .putup_translate .translate_info .translate_content{
-	display: inline-block;
-	float: left;
-	width: auto;
 	font-size: 18px;
 }
 .app_wrapper .main_content .putup_translator{
@@ -196,4 +133,44 @@ body{
 }
 .app_wrapper .main_content .putup_transbellow{
 	font-size: 20px;
+}
+
+.app_wrapper .main_content .putup_promise{}
+.app_wrapper .main_content .putup_promise .promise_info{}
+.app_wrapper .main_content .putup_promise .promise_info .promise_heading{
+	font-size: 20px;
+}
+.app_wrapper .main_content .putup_promise .promise_info .promise_content{}
+.app_wrapper .main_content .putup_promise .promise_info .promise_bottom{
+	padding-top: 20px;
+}
+.app_wrapper .main_content .putup_sign{
+	width: 100%;
+	padding-top: 100px;
+	text-align: center;
+	font-size: 14px;
+}
+.app_wrapper .main_content .putup_sign .sign_first{
+	float: left;
+	width: 15%;
+}
+.app_wrapper .main_content .putup_sign .sign_second{
+	float: left;
+	width: 15%;
+}
+.app_wrapper .main_content .putup_sign .sign_third{
+	float: left;
+	width: 15%;
+}
+.app_wrapper .main_content .putup_sign .sign_forth{
+	float: left;
+	width: 15%;
+}
+.app_wrapper .main_content .putup_sign .sign_fifth{
+	float: left;
+	width: 15%;
+}
+.app_wrapper .main_content .putup_sign .sign_sixth{
+	float: left;
+	width: auto;
 }
